Dados commit: -CRUD de usuários = OK -CRUD de livros   = OK
-Funcionalidades do Bibliotecário = 100%
-Funcionalidades do Balconista    = 50%

--- a/web/cadastrarUsuarioBalconista.xhtml
+++ b/web/cadastrarUsuarioBalconista.xhtml
@@ -66,7 +66,7 @@
             <p>
                 Para cadastrar um usuário em nosso sistema, siga os passos abaixo:<br/>
                 1º) Fornecer os dados necessário,<b> é obrigatório o preenchimento de todos os dados. </b><br/>
-                2º) Após preencher corretamente todos os dados, clique em <b>Enviar dados</b><br/>.
+                2º) Após preencher corretamente todos os dados, clique em <b>Enviar dados</b>.<br/>
             </p>
         </p>
     </div>
