--- a/web/acessoBalconista.xhtml
+++ b/web/acessoBalconista.xhtml
@@ -104,6 +104,7 @@
     <i><h1 align="center"> BiblioTec </h1></i>
     <p:menubar style="align-items: center">
         <p:menuitem value="SAIR" url="gestaoBibliotecas.xhtml"></p:menuitem>
+        <p:menuitem value="ACERVO" url="consultarAcervo.xhtml"></p:menuitem>
         <p:menuitem value="AJUDA?" url="javascript: abrir();"></p:menuitem>
     </p:menubar>
     <section alig="center" class="row">
