--- a/web/deletarUsuario.xhtml
+++ b/web/deletarUsuario.xhtml
@@ -3,13 +3,14 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 <h:head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
           crossorigin="anonymous"></link>
 
-    <title>Deletar Usuários | BiblioTec</title>
+    <title>Deletar Usuário | BiblioTec</title>
 
     <link href="icone.png" rel="shortcut icon" type="image/x-png"></link>
 
@@ -17,62 +18,206 @@
         <style>
             .popup {
                 position: fixed;
-                top: 0;
+                top: 10px;
                 bottom: 0;
                 left: 0;
                 right: 0;
                 margin: auto;
                 width: 500px;
-                height: 260px;
+                height: 160px;
                 padding: 15px;
                 border: solid 1pX black;
                 background: white;
                 display: none;
             }
+
+
         </style>
     </meta>
-
     <script type="text/javascript">
         function abrir() {
             document.getElementById('popup').style.display = 'block';
         }
+
         function fechar() {
             document.getElementById('popup').style.display = 'none';
         }
     </script>
+
+    <meta charset="utf-8">
+        <style>
+            .conf {
+                position: fixed;
+                top: 10px;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                margin: auto;
+                width: 500px;
+                height: 170px;
+                padding: 15px;
+                border: solid 1pX black;
+                background: white;
+                display: none;
+            }
+
+            .fechar {
+                position: absolute;
+                top: -120px;
+                bottom: 0;
+                left: 0;
+                right: -460px;
+                margin: auto;
+                width: 25px;
+                height: 25px;
+                border: black 1px solid;
+                border-radius: 3px;
+                background: gray;
+                color: blue;
+            }
+        </style>
+    </meta>
+
+    <script type="text/javascript">
+        function abri() {
+            document.getElementById('conf').style.display = 'block';
+        }
+
+        function fecha() {
+            document.getElementById('conf').style.display = 'none';
+        }
+    </script>
 </h:head>
 <h:body>
+    <style type="text/css">
+        .value {
+            font-weight: bold;
+        }
+    </style>
+
     <div id="popup" class="popup">
         <p>Olá,
-            <a href="#" onClick="document.getElementById('popup').style.display = 'none';">[Fechar]</a>
+            <button class="fechaAjuda" onclick="fechar()">x</button>
             <b></b>
             <p>
-                COLOCAR A AJUDA DO BALCONISTA AQUI
+                Para deletar um usuário em nosso sistema, siga os passos abaixo:<br/>
+                1º) Fornecer o nome do usuário desejado;<br/>
+                2º) Após preencher o nome, clique em <b>Buscar</b> para filtrar o usuário desejado;<br/>
+                3º) Preencher o <b>Id</b> do usuário e clique em <b>Deletar</b>.
             </p>
-            <b></b>
-
         </p>
-
     </div>
+
     <i><h1 align="center"> BiblioTec </h1></i>
     <p:menubar style="align-items: center">
         <p:menuitem value="MENU INICIAL" url="acessoBalconista.xhtml"></p:menuitem>
         <p:menuitem value="AJUDA?" url="javascript: abrir();"></p:menuitem>
     </p:menubar>
-    <section alig="center" class="right">
+    <section alig="center" class="row">
         <div class="jumbotron">
             <h:form id="telaBalconista">
                 <div class="form-group">
                     <h5 align="center">Controle de Usuarios</h5>
                 </div>
+            </h:form>
+            <h:form id="buscarLivro">
                 <div class="form-group">
-                    <div class="form-group">
-
-                        oi
-
-                    </div>
+                    <h:outputLabel value="Nome do Usuário"/>
+                    <p:inputText value="#{userBean.user.nome}" class="form-control" required="false"
+                                 placeholder="Insira o título do livro"></p:inputText>
+                </div>
+                <div class="form-group">
+                    <h:commandButton value="Buscar" class="btn btn-block btn-primary"
+                                     action="#{userBean.realizaConsultaUsuario}"></h:commandButton>
                 </div>
             </h:form>
+            <section alig="center" class="row">
+                <div class="form-group">
+                    <p:dataTable value="#{userBean.realizaConsultaUsuario()}" var="usuario" border="9"
+                                 rendered="true"
+                                 title="Relação de Usuários.">
+
+                        <f:facet name="header">
+                            Relação de Usuários
+                        </f:facet>
+
+                        <p:column>
+                            <f:facet name="header">Id</f:facet>
+                            #{usuario.codusuario}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">Nome</f:facet>
+                            #{usuario.nome}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">Usuario</f:facet>
+                            #{usuario.usuario}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">E-Mail</f:facet>
+                            #{usuario.email}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">RG</f:facet>
+                            #{usuario.rg}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">CPF</f:facet>
+                            #{usuario.cpf}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">Endereço</f:facet>
+                            #{usuario.endereco}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">CEP</f:facet>
+                            #{usuario.cep}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">Cidade</f:facet>
+                            #{usuario.cidade}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">Estado</f:facet>
+                            #{usuario.estado}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">Permissão</f:facet>
+                            #{usuario.perfil}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">Status</f:facet>
+                            #{usuario.status}
+                        </p:column>
+                    </p:dataTable>
+                    <h:form id="deletarUsuario">
+                        <div class="form-group">
+                            <h:outputLabel value="Id do Usuario"/><font color="red">*</font>
+                            <p:inputText value="#{userBean.user.codusuario}" class="form-control"
+                                         required="true" placeholder="Insira o código Id do usuário"></p:inputText>
+                        </div>
+                        <div id="conf" class="conf">
+                            <p align="center">
+                                <h:outputLabel value="Deseja deletar o usuário selecionado?"/>
+                            </p>
+                            <h:form>
+                                <div class="form-group">
+                                    <h:commandButton value="Sim" class="btn btn-block btn-primary"
+                                                     action="#{userBean.realizaDelecaoUsuario}"/>
+                                </div>
+                                <div class="form-group">
+                                    <h:commandButton value="Não" class="btn btn-block btn-primary"
+                                                     onclick="fecha()"></h:commandButton>
+                                </div>
+                            </h:form>
+                        </div>
+                        <div class="form-group">
+                            <h:commandButton value="Deletar" class="btn btn-block btn-primary"
+                                             rendered="true" onclick="abri()"></h:commandButton>
+                        </div>
+                    </h:form>
+                </div>
+            </section>
         </div>
     </section>
 </h:body>
