--- a/web/editarUsuario.xhtml
+++ b/web/editarUsuario.xhtml
@@ -3,31 +3,62 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 <h:head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
           crossorigin="anonymous"></link>
 
-    <title>Alterar Usuários | BiblioTec</title>
+    <title>Alterar Usuário | BiblioTec</title>
 
     <link href="icone.png" rel="shortcut icon" type="image/x-png"></link>
 
     <meta charset="utf-8">
-        <style>
+        <style id="">
             .popup {
                 position: fixed;
-                top: 0;
+                top: 10px;
                 bottom: 0;
                 left: 0;
                 right: 0;
                 margin: auto;
                 width: 500px;
-                height: 260px;
+                height: 220px;
                 padding: 15px;
                 border: solid 1pX black;
                 background: white;
                 display: none;
+            }
+
+            .conf {
+                position: fixed;
+                top: 10px;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                margin: auto;
+                width: 500px;
+                height: 170px;
+                padding: 15px;
+                border: solid 1pX black;
+                background: white;
+                display: none;
+            }
+
+            .fechar {
+                position: absolute;
+                top: -175px;
+                bottom: 0;
+                left: 0;
+                right: -460px;
+                margin: auto;
+                width: 25px;
+                height: 25px;
+                border: black 1px solid;
+                border-radius: 3px;
+                background: gray;
+                color: blue;
             }
         </style>
     </meta>
@@ -36,43 +67,226 @@
         function abrir() {
             document.getElementById('popup').style.display = 'block';
         }
+
         function fechar() {
             document.getElementById('popup').style.display = 'none';
         }
     </script>
+
+    <script type="text/javascript">
+        function abri() {
+            document.getElementById('conf').style.display = 'block';
+        }
+
+        function fecha() {
+            document.getElementById('conf').style.display = 'none';
+        }
+    </script>
 </h:head>
 <h:body>
+
+    <style type="text/css">
+        .value {
+            font-weight: bold;
+        }
+    </style>
+
     <div id="popup" class="popup">
         <p>Olá,
-            <a href="#" onClick="document.getElementById('popup').style.display = 'none';">[Fechar]</a>
+            <button class="fechar" onclick="fechar()">x</button>
             <b></b>
             <p>
-                COLOCAR A AJUDA DO BALCONISTA AQUI
+                Para alterar os dados do usuário, siga os seguintes passos:<br/>
+                1) Use o botão <b>Buscar</b> para filtrar os dados do usuário que deseja alterar.<br/>
+                2) <b>Preencha</b> apenas o que deseja alterar.<br/>
+                3) <b>Informe o ID</b> do usuário e clique em <b> Alterar </b> para salvar as novas informações.
             </p>
-            <b></b>
-
         </p>
-
     </div>
     <i><h1 align="center"> BiblioTec </h1></i>
     <p:menubar style="align-items: center">
         <p:menuitem value="MENU INICIAL" url="acessoBalconista.xhtml"></p:menuitem>
         <p:menuitem value="AJUDA?" url="javascript: abrir();"></p:menuitem>
     </p:menubar>
-    <section alig="center" class="right">
+    <section alig="center" class="row">
         <div class="jumbotron">
-            <h:form id="telaBalconista">
+            <h:form id="telaBibliotecario">
                 <div class="form-group">
-                    <h5 align="center">Controle de Usuarios</h5>
-                </div>
-                <div class="form-group">
-                    <div class="form-group">
-
-                        oi
-
-                    </div>
+                    <h5 align="center">Controle de Usuários</h5><br/>
                 </div>
             </h:form>
+            <h:form id="buscarUsuário">
+                <div class="form-group">
+                    <h:outputLabel value="Nome do Usuário"/>
+                    <p:inputText value="#{userBean.user.nome}" class="form-control" required="false"
+                                 placeholder="Insira o nome do usuário"></p:inputText>
+                </div>
+                <div class="form-group">
+                    <h:commandButton value="Buscar" class="btn btn-block btn-primary"
+                                     action="#{userBean.realizaConsultaUsuario}"></h:commandButton>
+                </div>
+            </h:form>
+            <section alig="center" class="row">
+                <div class="form-group">
+                    <p:dataTable value="#{userBean.realizaConsultaUsuario()}" var="usuario" border="9"
+                                 rendered="true"
+                                 title="Relação de Usuários.">
+
+                        <f:facet name="header">
+                            Relação de Usuários
+                        </f:facet>
+                        <p:column>
+                            <f:facet name="header">Id</f:facet>
+                            #{usuario.codusuario}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">Nome</f:facet>
+                            #{usuario.nome}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">Usuario</f:facet>
+                            #{usuario.usuario}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">E-Mail</f:facet>
+                            #{usuario.email}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">RG</f:facet>
+                            #{usuario.rg}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">CPF</f:facet>
+                            #{usuario.cpf}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">Endereço</f:facet>
+                            #{usuario.endereco}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">CEP</f:facet>
+                            #{usuario.cep}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">Cidade</f:facet>
+                            #{usuario.cidade}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">Estado</f:facet>
+                            #{usuario.estado}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">Permissão</f:facet>
+                            #{usuario.perfil}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">Status</f:facet>
+                            #{usuario.status}
+                        </p:column>
+                    </p:dataTable>
+                    <p align="center">
+                        <font color="red">**Inserir as informações apenas nos campos que deseja alterar**</font>
+                    </p>
+                    <h:form id="alterarUsuario">
+                        #{userBean.user.nome = ""}
+                        <div class="form-group">
+                            <h:outputLabel value="Nome"/>
+                            <p:inputText value="#{userBean.user.nome}" class="form-control"
+                                         required="false" placeholder="Insira o nome do usuário"></p:inputText>
+                        </div>
+                        <div class="form-group">
+                            <h:outputLabel value="Usuário"/>
+                            <p:inputText value="#{userBean.user.usuario}" class="form-control"
+                                         required="false" placeholder="Insira o username"></p:inputText>
+                        </div>
+                        <div class="form-group">
+                            <h:outputLabel value="E-Mail"/>
+                            <p:inputText value="#{userBean.user.email}" class="form-control"
+                                         required="false" placeholder="Insira o novo e-mail"></p:inputText>
+                        </div>
+                        <div class="form-group">
+                            <h:outputLabel value="RG"/>
+                            <p:inputText value="#{userBean.user.rg}" class="form-control"
+                                         required="false" placeholder="Insira o RG(somente números)"></p:inputText>
+                        </div>
+                        <div class="form-group">
+                            <h:outputLabel value="CPF"/>
+                            <p:inputText value="#{userBean.user.cpf}" class="form-control"
+                                         required="false" placeholder="Insira o CPF(somente números)"></p:inputText>
+                        </div>
+                        <div class="form-group">
+                            <h:outputLabel value="Endereço"/>
+                            <p:inputText value="#{userBean.user.endereco}" class="form-control"
+                                         required="false" placeholder="Insira o novo endereço do usuário"></p:inputText>
+                        </div>
+                        <div class="form-group">
+                            <h:outputLabel value="CEP"/>
+                            <p:inputText value="#{userBean.user.cep}" class="form-control"
+                                         required="false" placeholder="Insira o novo CEP(somente números)"></p:inputText>
+                        </div>
+                        <div class="form-group">
+                            <h:outputLabel value="Cidade"/>
+                            <p:inputText value="#{userBean.user.cidade}" class="form-control"
+                                         required="false" placeholder="Insira a nova cidade do usuário"></p:inputText>
+                        </div>
+                        <div class="form-group">
+                            <h:outputLabel value="Estado"/>
+                            <p:inputText value="#{userBean.user.estado}" class="form-control"
+                                         required="false" placeholder="Insira o novo estado do usuário"></p:inputText>
+                        </div>
+
+                        <h:outputText value="Perfil de Usuário"/>
+                        <div align="left" class="form-group">
+                            <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
+                                <p:selectOneButton value="#{userBean.user.permissao}">
+                                    <f:selectItem itemLabel="Bibliotecário" itemValue='1'/>
+                                    <f:selectItem itemLabel="Balconista" itemValue='2'/>
+                                    <f:selectItem itemLabel="Aluno" itemValue='3'/>
+                                </p:selectOneButton>
+                            </h:panelGrid>
+                        </div>
+
+                        <h:outputText value="Status do Usuário"/><font color="red">*</font>
+                        <div align="left" class="form-group">
+                            <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
+                                <p:selectOneButton value="#{userBean.user.ativo}" required="true">
+                                    <f:selectItem itemLabel="Ativo" itemValue='1'/>
+                                    <f:selectItem itemLabel="Inativo" itemValue='0'/>
+                                </p:selectOneButton>
+                            </h:panelGrid>
+                        </div>
+
+                        <div class="form-group">
+                            <h:outputLabel value="Id do Usuário"/><font color="red">*</font>
+                            <p:inputText value="#{userBean.user.codusuario}" class="form-control"
+                                         required="true" placeholder="Insira o Id do usuário"></p:inputText>
+                        </div>
+                        <div class="form-group">
+                            <p:growl id="msg"/>
+
+                            <div id="conf" class="conf">
+                                <p align="center">
+                                    <h:outputLabel value="Deseja salvar as alterações?"/>
+                                </p>
+                                <h:form>
+                                    <div class="form-group">
+                                        <h:commandButton value="Sim" class="btn btn-block btn-primary"
+                                                         action="#{userBean.realizaEdicaoUsuario}"/>
+                                    </div>
+                                    <div class="form-group">
+                                        <h:commandButton value="Não" class="btn btn-block btn-primary"
+                                                         onclick="fecha()"></h:commandButton>
+                                    </div>
+                                </h:form>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <h:commandButton value="Alterar" class="btn btn-block btn-primary"
+                                             rendered="true" onclick="abri()"></h:commandButton>
+                        </div>
+                    </h:form>
+                </div>
+            </section>
         </div>
     </section>
 </h:body>
