Dados commit: -CRUD de usuários = OK -CRUD de livros   = OK
-Funcionalidades do Bibliotecário = 100%
-Funcionalidades do Balconista    = 50%

-Melhoras nos botões de Ativar/Inativar livros;
-Melhoras no posicionamento do section

--- a/web/cadastrarUsuarioBalconista.xhtml
+++ b/web/cadastrarUsuarioBalconista.xhtml
@@ -81,6 +81,18 @@
             <h:form id="cadastroLivro">
                 <div class="form-group">
                     <h5 align="center">Formulário de Usuário</h5><br/>
+                    <div class="form-group">
+                        <h:commandButton value="Consultar Usuário" class="btn btn-block btn-primary"
+                                         action="consultaUsuario.xhtml"/>
+                    </div>
+                    <div class="form-group">
+                        <h:commandButton value="Alterar Usuário" class="btn btn-block btn-primary"
+                                         action="editarUsuario.xhtml"/>
+                    </div>
+                    <div class="form-group">
+                        <h:commandButton value="Deletar Usuário" class="btn btn-block btn-primary"
+                                         action="deletarUsuario.xhtml"/>
+                    </div>
                 </div>
             </h:form>
             <h:form id="dadosUsuario">
