--- a/web/consultarLivro.xhtml
+++ b/web/consultarLivro.xhtml
@@ -74,7 +74,7 @@
         <p:menuitem value="MENU INICIAL" url="acessoBibliotecario.xhtml"></p:menuitem>
         <p:menuitem value="AJUDA?" url="javascript: abrir();"></p:menuitem>
     </p:menubar>
-    <section alig="center" class="row">
+    <section alig="center" class="right">
         <div class="jumbotron">
             <h:form id="telaBibliotecario">
                 <div class="form-group">
