--- a/web/consultaUsuario.xhtml
+++ b/web/consultaUsuario.xhtml
@@ -83,6 +83,18 @@
                     <h5 align="center">Controle de Usuarios</h5>
                 </div>
                 <div class="form-group">
+                    <h:commandButton value="Cadastrar Usuário" class="btn btn-block btn-primary"
+                                     action="cadastrarUsuarioBalconista.xhtml"/>
+                </div>
+                <div class="form-group">
+                    <h:commandButton value="Alterar Usuário" class="btn btn-block btn-primary"
+                                     action="editarUsuario.xhtml"/>
+                </div>
+                <div class="form-group">
+                    <h:commandButton value="Deletar Usuário" class="btn btn-block btn-primary"
+                                     action="deletarUsuario.xhtml"/>
+                </div>
+                <div class="form-group">
                     <section alig="center" class="row">
 
                         <div class="form-group">
